// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test JsonToMjml when mode is "production" should render as expected 1`] = `
"
          <mjml>
          <mj-head>
              
    <mj-html-attributes>
      <mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"text-color\\" text-color=\\"#000000\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-family\\" font-family=\\"-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans','Helvetica Neue', sans-serif\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-size\\" font-size=\\"14px\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"line-height\\" line-height=\\"1.7\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-weight\\" font-weight=\\"400\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"responsive\\" responsive=\\"true\\"></mj-html-attribute>

    </mj-html-attributes>
  
              
              
              
              <mj-breakpoint width=\\"480px\\" />
              
              
            <mj-attributes>
              
              <mj-all font-family=\\"-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans','Helvetica Neue', sans-serif\\" />
              <mj-text font-size=\\"14px\\" />
              <mj-text color=\\"#000000\\" />
        <mj-text line-height=\\"1.7\\" />
        <mj-text font-weight=\\"400\\" />
              

            </mj-attributes>
          </mj-head>
          <mj-body background-color=\\"#efeeea\\" width=\\"600px\\" ><mj-section padding=\\"20px 0px 20px 0px\\" border=\\"none\\" direction=\\"ltr\\" text-align=\\"center\\" background-repeat=\\"repeat\\" background-size=\\"auto\\" background-position=\\"top center\\" ><mj-column padding=\\"0px 0px 0px 0px\\" border=\\"none\\" vertical-align=\\"top\\" ><mj-text padding=\\"10px 25px 10px 25px\\" align=\\"left\\" >Make it easy for everyone to compose emails!</mj-text></mj-column></mj-section></mj-body></mjml > "
`;

exports[`Test JsonToMjml when mode is "testing" should render as expected 1`] = `
"
          <mjml>
          <mj-head>
              
    <mj-html-attributes>
      <mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"text-color\\" text-color=\\"#000000\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-family\\" font-family=\\"-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans','Helvetica Neue', sans-serif\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-size\\" font-size=\\"14px\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"line-height\\" line-height=\\"1.7\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-weight\\" font-weight=\\"400\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"responsive\\" responsive=\\"true\\"></mj-html-attribute>

    </mj-html-attributes>
  
              
              
              
              <mj-breakpoint width=\\"480px\\" />
              
              
            <mj-attributes>
              
              <mj-all font-family=\\"-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans','Helvetica Neue', sans-serif\\" />
              <mj-text font-size=\\"14px\\" />
              <mj-text color=\\"#000000\\" />
        <mj-text line-height=\\"1.7\\" />
        <mj-text font-weight=\\"400\\" />
              

            </mj-attributes>
          </mj-head>
          <mj-body background-color=\\"#efeeea\\" width=\\"600px\\" css-class=\\"email-block node-idx-content node-type-page\\" ><mj-section padding=\\"20px 0px 20px 0px\\" border=\\"none\\" direction=\\"ltr\\" text-align=\\"center\\" background-repeat=\\"repeat\\" background-size=\\"auto\\" background-position=\\"top center\\" css-class=\\"email-block node-idx-content.children.[0] node-type-section\\" ><mj-column padding=\\"0px 0px 0px 0px\\" border=\\"none\\" vertical-align=\\"top\\" css-class=\\"email-block node-idx-content.children.[0].children.[0] node-type-column\\" ><mj-text padding=\\"10px 25px 10px 25px\\" align=\\"left\\" css-class=\\"email-block node-idx-content.children.[0].children.[0].children.[0] node-type-text\\" >Make it easy for everyone to compose emails!</mj-text></mj-column></mj-section></mj-body></mjml > "
`;

exports[`json with manual variables added to content should render without any escaped HTML characters 1`] = `
"
          <mjml>
          <mj-head>
              
    <mj-html-attributes>
      <mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"text-color\\" text-color=\\"#000000\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-family\\" font-family=\\"-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans','Helvetica Neue', sans-serif\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-size\\" font-size=\\"14px\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"line-height\\" line-height=\\"1.7\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"font-weight\\" font-weight=\\"400\\"></mj-html-attribute>
<mj-html-attribute class=\\"easy-email\\" multiple-attributes=\\"false\\" attribute-name=\\"responsive\\" responsive=\\"true\\"></mj-html-attribute>

    </mj-html-attributes>
  
              
              
              
              <mj-breakpoint width=\\"480px\\" />
              
              
            <mj-attributes>
              
              <mj-all font-family=\\"-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans','Helvetica Neue', sans-serif\\" />
              <mj-text font-size=\\"14px\\" />
              <mj-text color=\\"#000000\\" />
        <mj-text line-height=\\"1.7\\" />
        <mj-text font-weight=\\"400\\" />
              

            </mj-attributes>
          </mj-head>
          <mj-body background-color=\\"#efeeea\\" width=\\"600px\\" css-class=\\"email-block node-idx-content node-type-page\\" ><mj-section padding=\\"20px 0px 20px 0px\\" border=\\"none\\" direction=\\"ltr\\" text-align=\\"center\\" background-repeat=\\"repeat\\" background-size=\\"auto\\" background-position=\\"top center\\" css-class=\\"email-block node-idx-content.children.[0] node-type-section\\" ><mj-column padding=\\"0px 0px 0px 0px\\" border=\\"none\\" vertical-align=\\"top\\" css-class=\\"email-block node-idx-content.children.[0].children.[0] node-type-column\\" ><mj-text padding=\\"10px 25px 10px 25px\\" align=\\"left\\" css-class=\\"email-block node-idx-content.children.[0].children.[0].children.[0] node-type-text\\" ><div>{% assign iteration_example = \\"First,Second,Third,Fourth,Fifth\\" | split: ',' %}</div></mj-text></mj-column></mj-section></mj-body></mjml > "
`;
